kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animus-api
spec:
  selector:
    matchLabels:
      app: animus-api
  template:
    metadata:
      labels:
        app: animus-api
    spec:
      nodeSelector:
        role: application
      containers:
        - name: animus-api
          image: abstergo07/animus-api:latest
          ports:
            - containerPort: 4000
          startupProbe:
            httpGet:
              path: /health
              port: 4000
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: animus-api-svc
spec:
  selector:
    app: animus-api
  ports:
    - port: 4000
      targetPort: 4000
