kubernetes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animus-client
spec:
  selector:
    matchLabels:
      app: animus-client
  template:
    metadata:
      labels:
        app: animus-client
    spec:
      nodeSelector:
        role: application
      containers:
        - name: animus-client
          image: abstergo07/animus-client:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: animus-client-svc
spec:
  selector:
    app: animus-client
  ports:
    - port: 80
      targetPort: 80
